--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     ext.kotlin_version = '1.1.4-3'
+    ext.kotlinx_coroutines_version = '0.18'
+    ext.disruptor_version = '3.3.6'
 
     repositories {
         jcenter()
@@ -10,7 +12,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.18'
+        classpath "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
     }
 }
 
@@ -35,7 +37,8 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
-    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.18'
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
+    compile "com.lmax:disruptor:$disruptor_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
