--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
     ext.kotlin_version = '1.1.4-3'
     ext.kotlinx_coroutines_version = '0.18'
     ext.disruptor_version = '3.3.6'
+    ext.log4j_version = '2.9.0'
+    ext.slf4j_version = '1.7.25'
+    ext.jackson_version = '2.9.0'
 
     repositories {
         jcenter()
@@ -39,6 +42,12 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
     compile "com.lmax:disruptor:$disruptor_version"
+    compile "org.apache.logging.log4j:log4j-api:$log4j_version"
+    compile "org.apache.logging.log4j:log4j-core:$log4j_version"
+    compile "org.apache.logging.log4j:log4j-slf4j-impl:$log4j_version"
+    compile "org.slf4j:slf4j-api:$slf4j_version"
+    compile "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
+    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jackson_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
